<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/movie_settings">

    <com.thebaileybrew.flix.ui.CustomPreferenceCategory
        android:title="@string/sorting_and_filters">
        <ListPreference
            android:defaultValue="preference_sort_popular"
            android:entries="@array/preference_sort_options"
            android:entryValues="@array/preference_sort_values"
            android:key="@string/preference_sort_key"
            android:title="@string/preference_sort_label" />
        <ListPreference
            android:defaultValue="preference_sort_language"
            android:entries="@array/preference_sort_language_options"
            android:entryValues="@array/preference_sort_language_values"
            android:key="@string/preference_sort_language_key"
            android:title="@string/preference_sort_language_label" />

    </com.thebaileybrew.flix.ui.CustomPreferenceCategory>

</PreferenceScreen>